ItemOption의 option필드를 Map형태로 받음